obtencion de clientes ok
